# rust-market-making-gateway

./: .dockerignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yaml
configs/: binance.yaml
src/: config.rs  logging.rs  main.rs  types.rs
src/api/: http.rs
src/book/: mod.rs  order_book.rs  top_of_book.rs
src/metrics/: counters.rs  latency.rs  mod.rs
src/strategy/: market_maker.rs
src/venue/: binance.rs  coinbase.rs  kraken.rs  mod.rs  rate_limit.rs  sequence.rs  supervisor.rs
