[package]
name = "rust-market-making-gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = "0.3"

reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

anyhow = "1"
thiserror = "1"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

axum = "0.7"
tower-http = { version = "0.6", features = ["trace"] }

dashmap = "6"
parking_lot = "0.12"

clap = { version = "4", features = ["derive"] }
url = "2"